--- a/Lesson13(Start the Amazon Project and Intro to Git)/javascript-amazon-project-main/checkout.html
+++ b/Lesson13(Start the Amazon Project and Intro to Git)/javascript-amazon-project-main/checkout.html
@@ -83,5 +83,6 @@
       </div>
     </div>
   </body>
+  <script type="module" src="https://unpkg.com/supersimpledev@1.0.1/hello.esm.js"></script>
   <script type="module" src="scripts/checkout.js"></script>
 </html>
